# levana-perps

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  justfile  release.toml
.ci/: cloudflare-build.sh  contracts.sh  index.html  make-source-tarball.sh  migrateall-injective.sh  migrateall-neutron.sh  migrateall-osmosis.sh  migrateall-sei.sh  migrateall.sh  native-contract-build.sh  osmolocal.Dockerfile  osmolocal.sh  setup.sh  upload-source-tarball.sh
.ci/bots/: Dockerfile  amber.yaml
.ci/companion/: Dockerfile
.ci/market-analyzer/: Dockerfile
.ci/perps-deploy/: Dockerfile
.ci/source-tarball-misc/: Cargo.toml  build.sh
.github/workflows/: audit_slides.yaml  binary.yaml  bots.yaml  build_localosmosis.yaml  committer_check.yml  companion.yaml  market_analyzer.yaml  perps-deploy.yaml  test.yml
contracts/copy_trading/: Cargo.toml  README.md
contracts/copy_trading/src/: common.rs  execute.rs  lib.rs  prelude.rs  query.rs  reply.rs  sanity.rs  state.rs  types.rs  work.rs
contracts/countertrade/: Cargo.toml  README.md
contracts/countertrade/src/: common.rs  execute.rs  lib.rs  prelude.rs  query.rs  reply.rs  state.rs  types.rs  work.rs
contracts/cw20/: Cargo.toml  README.md
contracts/cw20/src/: contract.rs  lib.rs  state.rs
contracts/factory/: Cargo.toml  README.md
contracts/factory/src/: contract.rs  lib.rs  state.rs
contracts/factory/src/state/: all_contracts.rs  auth.rs  code_ids.rs  copy_trading.rs  countertrade.rs  label.rs  liquidity_token.rs  market.rs  position_token.rs  referrer.rs  reply.rs  shutdown.rs  vault.rs
contracts/farming/: Cargo.toml
contracts/farming/src/: execute.rs  lib.rs  lifecycle.rs  prelude.rs  query.rs  state.rs
contracts/farming/src/state/: auth.rs  farming.rs  funds.rs  lockdrop.rs  market_info.rs  period.rs  reply.rs  rewards.rs  status.rs
contracts/faucet/: Cargo.toml  README.md
contracts/faucet/src/: contract.rs  state.rs
contracts/hatching/: Cargo.toml
contracts/hatching/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/hatching/src/state/: config.rs  hatch.rs  ibc.rs  lvn.rs  nft_burn.rs  nft_mint.rs  profile.rs
contracts/ibc_execute/: Cargo.toml
contracts/ibc_execute/src/: contract.rs  state.rs
contracts/ibc_execute_proxy/: Cargo.toml
contracts/ibc_execute_proxy/src/: contract.rs  (+2 more)
contracts/liquidity_token/: Cargo.toml  README.md
contracts/liquidity_token/src/: contract.rs  state.rs
contracts/liquidity_token/src/state/: kind.rs  market.rs
contracts/market/: Cargo.toml  README.md
contracts/market/proptest-regressions/state/: slippage.txt
contracts/market/src/: constants.rs  contract.rs  deferred_exec.rs  lib.rs  prelude.rs  state.rs
contracts/market/src/contract/: perps_info.rs
contracts/market/src/state/: config.rs  crank.rs  data_series.rs  deferred_execution.rs  delta_neutrality_fee.rs  fees.rs  funding.rs  liquidity.rs  market.rs  meta.rs  order.rs  position.rs  referral.rs  rujira_enshrined_oracle.rs  rujira_network.rs  sanity.rs  shutdown.rs  spot_price.rs  stale.rs  status.rs  token.rs
contracts/market/src/state/funding/: aggregate_capping.rs  borrow_fees.rs
contracts/market/src/state/history/: lp.rs  mod.rs  trade.rs
contracts/market/src/state/liquidity/: cw20.rs  stats.rs
contracts/market/src/state/position/: close.rs  cw721.rs  liquifund.rs  open.rs  take_profit.rs  update.rs  validate.rs
contracts/market/src/state/rujira/: enshrined_oracle.rs  grpc.rs  mod.rs  network.rs
contracts/position_token/: Cargo.toml  README.md
contracts/position_token/src/: contract.rs  state.rs
contracts/position_token/src/state/: market.rs
contracts/pyth_bridge/: Cargo.toml
contracts/rewards/: Cargo.toml
contracts/rewards/src/: contract.rs  lib.rs  state.rs
contracts/rewards/src/state/: config.rs  distribution.rs  ibc.rs  rewards.rs
contracts/tracker/: Cargo.toml
contracts/tracker/src/: execute.rs  lib.rs  lifecycle.rs  query.rs  state.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault/src/: common.rs  execute.rs  lib.rs  prelude.rs  query.rs  state.rs  types.rs
data/rewards/: 2024-07-07-trading-incentives.csv  2024-07-14-trading-incentives.csv  2024-07-21-trading-incentives.csv  2024-07-28-trading-incentives.csv  2024-08-04-trading-incentives.csv  2024-08-11-trading-incentives.csv  2024-08-18-trading-incentives.csv  2024-08-25-trading-incentives.csv  2024-09-01-trading-incentives.csv  2024-09-08-trading-incentives.csv  2024-09-15-trading-incentives.csv  2024-09-22-trading-incentives.csv  2024-09-29-trading-incentives.csv  2024-10-06-trading-incentives.csv  2024-10-13-trading-incentives.csv  2024-10-20-trading-incentives.csv  2024-10-27-trading-incentives.csv  2024-11-03-trading-incentives.csv  2024-11-10-trading-incentives.csv  2024-11-17-trading-incentives.csv  2024-11-24-trading-incentives.csv  2024-12-01-trading-incentives.csv  2024-12-08-trading-incentives.csv  2024-12-15-trading-incentives.csv  2024-12-22-trading-incentives.csv  2024-12-29-trading-incentives.csv  2025-01-05-trading-incentives.csv  2025-01-12-trading-incentives.csv  2025-01-19-trading-incentives.csv  2025-01-26-trading-incentives.csv  2025-02-02-trading-incentives.csv  2025-02-09-trading-incentives.csv  2025-02-16-trading-incentives.csv  2025-02-23-trading-incentives.csv  2025-03-02-trading-incentives.csv  2025-03-09-trading-incentives.csv  2025-03-16-trading-incentives.csv  2025-03-23-trading-incentives.csv  2025-03-30-trading-incentives.csv  2025-04-06-trading-incentives.csv  (+22 more)
docs/: crank-price-bots.md  perps-deploy.md  perps-qa.md
docs/slides/: 00-intro.md  01-fees.md  02-liquidity-pools.md  03-trading-overview.md  04-collateral-is-base.md  05-crank.md  06-wind-down-kill-switch.md  07-component-interactions.md  08-contracts.md  09-code-structure.md  10-history-usd.md  11-linear-prefix-sum-calculations.md  12-walkthroughs.md  launch.sh  reveal.json
research/price-manip-modeling/: Cargo.toml  README.md
research/price-manip-modeling/src/: amm.rs  attack.rs  cli.rs  config.rs  main.rs  perps.rs  system.rs  types.rs
ts-schema/: README.md  build-schema.mjs  package.json
(+19 files in other folders)
