[workspace]
resolver = "2"
members = [
    # Real protocol, mainnet contracts
    "contracts/factory",
    "contracts/liquidity_token",
    "contracts/market",
    "contracts/position_token",

    # Testnet support contracts
    "contracts/cw20",
    "contracts/faucet",
    "contracts/tracker",

    # Code used by the smart contracts
    "packages/msg",
    "packages/shared",

    # Code used for testing the smart contracts off chain
    "packages/multi_test",
    "packages/fuzz",

    # Helper executables for testing, deploying, and running bots
    "packages/perps-exes",
]

[workspace.dependencies]
cosmwasm-std = { version = "2.0.2" }
cosmwasm-schema = { version = "2.0.2" }
cw-multi-test = "2.0.1"
pyth-sdk-cw = { git = "https://github.com/lvn-hasky-dragon/pyth-crosschain.git", rev = "f6ede9803d07f63c8d146fb4ea3a8c1c1445fb57"}
cosmos = { git = "https://github.com/fpco/cosmos-rs.git", rev = "8b83752965f644651e5bac14b89ccaf658b02dda" }

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e1fbb12982d02f8ff3f1a291de60d423143c7f1" }
cosmwasm-schema = { git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e1fbb12982d02f8ff3f1a291de60d423143c7f1" }
cw-multi-test = { git = "https://github.com/lvn-hasky-dragon/cw-multi-test.git", rev = "fdc53afe6f71e9aed07bc69315d4ec7b24286615"}

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
