[workspace]
resolver = "2"
members = [
    # Real protocol, mainnet contracts
    "contracts/factory",
    "contracts/liquidity_token",
    "contracts/market",
    "contracts/position_token",

    # Support of the real protocol
    "contracts/countertrade",
    "contracts/copy_trading",

    # Testnet support contracts
    "contracts/cw20",
    "contracts/faucet",
    "contracts/tracker",

    # Code used by the smart contracts
    "packages/perpswap",

    # Code used for testing the smart contracts off chain
    "packages/multi_test",
    "packages/fuzz",

    # Helper executables for testing, deploying, and running bots
    "packages/perps-exes",
]

[workspace.dependencies]
cosmwasm-std = { version = "2.1.4" }

# See: https://github.com/CosmWasm/cosmwasm/issues/2309
# cosmwasm-schema = { version = "2.1.4" }
cosmwasm-schema = { git = "https://github.com/Levana-Protocol/cosmwasm", rev = "e0aa92ac1dd95e484744c2fa52bf184e26ae0e96"}

cw-multi-test = "2.2.0"
pyth-sdk-cw = { git = "https://github.com/lvn-hasky-dragon/pyth-crosschain.git", rev = "0d45c60ee97bfa20a81de1d5cd523f9d16f2c282"}
cosmos = { git = "https://github.com/fpco/cosmos-rs.git", rev = "bf6844adc6c8c056f80e793ace46d5126488c358", features = ["config"] }

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
