[workspace]
members = [
    "contracts/factory",
    "contracts/liquidity_token",
    "contracts/market",
    "contracts/position_token",
    "contracts/pyth_bridge", 
    "packages/msg",
    "packages/shared",
]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
