[workspace]
resolver = "2"
members = [
    "contracts/factory",
    "contracts/liquidity_token",
    "contracts/market",
    "contracts/position_token",
    "packages/msg",
    "packages/shared",
    "packages/perpswap",
]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "2.0.2" }
cosmwasm-schema = { version = "2.0.2" }
cw-multi-test = "2.0.1"
pyth-sdk-cw = { git = "https://github.com/lvn-hasky-dragon/pyth-crosschain.git", rev = "f6ede9803d07f63c8d146fb4ea3a8c1c1445fb57"}

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e1fbb12982d02f8ff3f1a291de60d423143c7f1" }
cosmwasm-schema = { git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e1fbb12982d02f8ff3f1a291de60d423143c7f1" }
cw-multi-test = { git = "https://github.com/lvn-hasky-dragon/cw-multi-test.git", rev = "fdc53afe6f71e9aed07bc69315d4ec7b24286615"}
