[package]
name = "levana_perpswap_cosmos_farming"
description = "Farming xLP for LVN emissions, and lockdrop management"
version = "0.1.0-beta.1"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
cosmwasm-std = { version = "1.5.4", features = ["abort"] }
cw-storage-plus = "1.2.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
anyhow = "1.0.67"
semver = "1.0.15"
cw-utils = "1.0.1"
