[package]
name = "levana_perpswap_cosmos_hatching"
version = "0.1.0-beta.16"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
shared = {package = "levana_perpswap_cosmos_shared", path = "../../packages/shared", features = ["chrono"] }
cosmwasm-std = { version = "1.2.3", features = ["abort", "ibc3"] }
cw2 = "1.0.1"
cw-storage-plus = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
semver = "1.0.17"
anyhow = "1.0.70"
cw-utils = "1.0.1"

[dev-dependencies]
cosmwasm-schema = {path = "../../packages/schema" }
serde_json = "1.0.93"
once_cell = "1.17"
