[package]
name = "levana_perpswap_cosmos_liquidity_token"
version = "0.1.1"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
shared = {package = "levana_perpswap_cosmos_shared", path = "../../packages/shared" }
cosmwasm-std = { version = "1.1.9", features = ["abort"] }
cw2 = "1.0.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.11"
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
thiserror = "1.0.38"
semver = "1.0.15"
anyhow = "1.0.67"
cw-utils = "1.0.1"

[dev-dependencies]
cosmwasm-schema = {path = "../../packages/schema" }
