[package]
name = "levana_perpswap_cosmos_market"
version = "0.1.2"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
sanity = []


[dependencies]
perpswap = {package = "levana_perpswap_cosmos", path = "../../packages/perpswap" }
cosmwasm-std = { workspace = true, features = ["abort"] }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
semver = "1.0.15"
anyhow = "1.0.82"
cw-utils = "2.0.0"
once_cell = "1"
indoc = "1.0.8"
pyth-sdk-cw = { workspace = true}
rujira-rs = { git = "https://gitlab.com/thorchain/rujira.git", rev = "acdbaa19836bb9cfa2e62ada6e8a2227373fe9df" }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
proptest = "1.0.0"
