[package]
name = "levana_perpswap_cosmos_position_token"
version = "0.1.1"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
shared = {package = "levana_perpswap_cosmos_shared", path = "../../packages/shared" }
cosmwasm-std = { version = "2.0.2", features = ["abort"] }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.17"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
thiserror = "1.0.38"
semver = "1.0.15"
anyhow = "1.0.82"
cw-utils = "1.0.1"
serde-json-wasm = "0.5"

[dev-dependencies]
cosmwasm-schema = {git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "cd3ae282e21e5082dd4cff8d23535159d59cb7d8", features=["allow-unknown-fields"] }
