[package]
name = "levana_perpswap_cosmos_rewards"
version = "0.1.0-beta.15"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
shared = {package = "levana_perpswap_cosmos_shared", path = "../../packages/shared" }
cosmwasm-std = { version = "1.2.3", features = ["abort", "ibc3"] }
cw2 = "1.0.1"
cw-storage-plus = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
semver = "1.0.17"
anyhow = "1.0.70"
cosmwasm-schema = {git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e36567b8359214f6690c8de081bb1e237803fb1", features=["allow-unknown-fields"] }