[package]
name = "levana_perpswap_cosmos_tracker"
description = "Tracks the information on our contracts uploaded and instantiated on a single chain"
version = "0.1.0-beta.1"
authors = ["Levana Team"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
msg = {package = "levana_perpswap_cosmos_msg", path = "../../packages/msg" }
cosmwasm-std = { workspace = true, features = ["abort"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.17"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
anyhow = "1.0.82"
