[package]
name = "levana_perpswap_cosmos_vault"
version = "0.1.0"
authors = ["Levana Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
perpswap = {package = "levana_perpswap_cosmos", path = "../../packages/perpswap" }
cosmwasm-std = { workspace = true, features = ["abort"] }
anyhow = "1.0.97"
cw-storage-plus = "2.0.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
