[workspace]

[package]
name = "price-manip-modeling"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["env", "derive"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
#chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
